# Phylactery

./: .envrc  .gitignore  Dockerfile  README.md  dprint.json  env.example  justfile  main.py  pyproject.toml  requirements.txt  shell.nix  shell.scm
.reuse/: dep5
