[tool.poetry]
name = "phylactery"
version = "0.1.0"
description = "Phylactery in a box!"
authors = ["ギャラ <me@gyara.moe>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
google-api-core = "^2.10.2"
google-cloud-compute = "^1.6.1"
python-telegram-bot = "^13.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
