[tool.poetry]
name = "phylactery"
version = "0.1.1"
description = "Phylactery in a box!"
authors = ["ギャラ <me@gyara.moe>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
google-api-core = "^2.10.2"
google-cloud-compute = "^1.6.1"
python-telegram-bot = {version = "^13.14", allow-prereleases = true}

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
